# droidboot_gui

./: .gitmodules  CMakeLists.txt  Makefile  droidboot.dec  droidboot.dsc  droidboot.inc  droidbootLib.inf  droidboot_config.h  lk.mk  rules.mk  u-boot.mk
.github/workflows/: submodule_auto_update.yml  submodule_dispatch_workflow.yml
backend/: Makefile  backend.mk  droidboot_drivers.c  droidboot_dualboot_backend.c
common/: Makefile  backend.mk  common.mk  droidboot_helpers.c  droidboot_init.c  droidboot_logging.c  droidboot_main.c  droidboot_screens.c  droidboot_stdfunc.c  droidboot_theme.c
config_parser/: Makefile  config_parser.mk  droidboot_config.c  droidboot_fs_util.c
dualboot_gui/: Makefile  droidboot_boot_logo.c  dualboot_gui.mk  dualboot_menu.c
extras/: droidboot_dtb.c  droidboot_kernel_helper.c
include/: droidboot_boot_logo.h  droidboot_config_parser.h  droidboot_drivers.h  droidboot_dtb.h  droidboot_dualboot_backend.h  droidboot_error.h  droidboot_fs_util.h  droidboot_gpt.h  droidboot_helpers.h  droidboot_init.h  droidboot_kernel_helper.h  droidboot_logging.h  droidboot_main.h  droidboot_mapped.h  droidboot_screens.h  droidboot_stdfunc.h  droidboot_theme.h  dualboot_menu.h
lib/: Makefile  lib.mk  lv_conf.h
storage/: .droidboot_mapped.c.kate-swp  Makefile  droidboot_gpt.c  droidboot_mapped.c  storage.mk
